# e2b-dogfooding-testing-agent

./: data.json  dev.md  main.py  playwright_setup.js  pyproject.toml  reddit_scraper.js  shared_dependencies.md
playwright_app/: main.py  reddit_scraper.py
src/: conftest.py  github.py  llm.py  math_operations.py  utils.py
